still trying to get upload working

--- a/nginx.conf
+++ b/nginx.conf
@@ -98,7 +98,7 @@ http {
         include /etc/nginx/sites-enabled/*.*;
 
         location /wbm {
-        
+
             if ($request_method !~ ^(GET|HEAD|POST|PUT|DELETE|PATCH)$ )
             {
                 return 444;
@@ -125,6 +125,26 @@ http {
             add_header X-Frame-Options SAMEORIGIN;
         }
         
+        location /upload {
+            
+            if ($request_method !~ ^(POST)$ ) {
+                return 405;
+            }
+            
+            alias /var/www/plcnext/upload;
+            ssi on;
+            expires off;
+            add_header Cache-Control no-cache;
+
+            fastcgi_pass 127.0.0.1:9001;
+            fastcgi_pass_header Cookie;
+            #fastcgi_store on;
+            #fastcgi_store_access group:rw all:rw;
+            #client_max_body_size 10M;
+            #fastcgi_param SCRIPT_FILENAME /var/www/plcnext/wbm/upload.cgi;
+            #include fastcgi.conf;
+        }
+
         location /welcome {
             alias /var/www/plcnext/welcome;
             index index.html;
