project now uploads in chunks

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ user www;
 worker_processes  5;
 
 error_log syslog:server=unix:/dev/log,tag=nginx,nohostname,severity=error;
+error_log /var/log/nginx/error.log info;
 pid        /run/nginx/nginx.pid;
 
 
@@ -121,28 +122,27 @@ http {
                 fastcgi_pass_header Cookie;
                 include fastcgi.conf;
             }
-            
-            add_header X-Frame-Options SAMEORIGIN;
-        }
-        
-        location /upload {
-            
-            if ($request_method !~ ^(POST)$ ) {
-                return 405;
+
+            location ~ ^/wbm/upload/Project/StartDownloading {
+                fastcgi_pass 127.0.0.1:9001;
+                fastcgi_pass_header Cookie;
+                include fastcgi.conf;
+            }
+
+            location ~ ^/wbm/upload/Project/UploadProject {
+                fastcgi_pass 127.0.0.1:9001;
+                fastcgi_pass_header Cookie;
+                include fastcgi.conf;
+            }
+
+            #this will be the one that triggers whatever script I implement
+            location ~ ^/wbm/upload/Project/FinishDownloading {
+                fastcgi_pass 127.0.0.1:9001;
+                fastcgi_pass_header Cookie;
+                include fastcgi.conf;
             }
             
-            alias /var/www/plcnext/upload;
-            ssi on;
-            expires off;
-            add_header Cache-Control no-cache;
-
-            fastcgi_pass 127.0.0.1:9001;
-            fastcgi_pass_header Cookie;
-            #fastcgi_store on;
-            #fastcgi_store_access group:rw all:rw;
-            #client_max_body_size 10M;
-            #fastcgi_param SCRIPT_FILENAME /var/www/plcnext/wbm/upload.cgi;
-            #include fastcgi.conf;
+            add_header X-Frame-Options SAMEORIGIN;
         }
 
         location /welcome {
